Fix grader overflow

--- a/style/kent/mods.less
+++ b/style/kent/mods.less
@@ -74,3 +74,10 @@ body.tii-box {
 #page-mod-quiz-edit .questionbankwindow.block div.header div.title h2 {
     color: #333;
 }
+
+// Grader fix.
+.path-grade-report-grader {
+    .gradeparent {
+        overflow: auto;
+    }
+}
